--- a/Car Price Prediction.ipynb
+++ b/Car Price Prediction.ipynb
@@ -35,7 +35,7 @@
     "# Place where data is\n",
     "#===================================================\n",
     "\n",
-    "os.chdir(r'C:\\Users\\Usuario\\Desktop\\Python\\Data\\kaggle\\Car Price Prediction')"
+    "#os.chdir(r'C:\\Users\\Usuario\\Desktop\\Python\\Data\\kaggle\\Car Price Prediction')"
    ]
   },
   {
@@ -4221,7 +4221,6 @@
     "fig, ax = plt.subplots(figsize = (30, 30))\n",
     "cmap = sns.diverging_palette(240, 10, as_cmap=True)\n",
     "sns.heatmap(df.corr(), vmax = 1, vmin = -1, cmap = cmap, annot = True, annot_kws = {\"fontsize\": 6})\n",
-    "plt.savefig('plot.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -4290,7 +4289,7 @@
        "  <th>Date:</th>             <td>Wed, 02 Aug 2023</td> <th>  Prob (F-statistic):</th> <td>1.63e-50</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>19:29:52</td>     <th>  Log-Likelihood:    </th> <td> -1028.6</td>\n",
+       "  <th>Time:</th>                 <td>19:40:32</td>     <th>  Log-Likelihood:    </th> <td> -1028.6</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   127</td>      <th>  AIC:               </th> <td>   2155.</td>\n",
@@ -4498,7 +4497,7 @@
        "\\textbf{Model:}                    &       OLS        & \\textbf{  Adj. R-squared:    } &     0.968   \\\\\n",
        "\\textbf{Method:}                   &  Least Squares   & \\textbf{  F-statistic:       } &     80.15   \\\\\n",
        "\\textbf{Date:}                     & Wed, 02 Aug 2023 & \\textbf{  Prob (F-statistic):} &  1.63e-50   \\\\\n",
-       "\\textbf{Time:}                     &     19:29:52     & \\textbf{  Log-Likelihood:    } &   -1028.6   \\\\\n",
+       "\\textbf{Time:}                     &     19:40:32     & \\textbf{  Log-Likelihood:    } &   -1028.6   \\\\\n",
        "\\textbf{No. Observations:}         &         127      & \\textbf{  AIC:               } &     2155.   \\\\\n",
        "\\textbf{Df Residuals:}             &          78      & \\textbf{  BIC:               } &     2295.   \\\\\n",
        "\\textbf{Df Model:}                 &          48      & \\textbf{                     } &             \\\\\n",
@@ -4589,7 +4588,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.968\n",
        "Method:                 Least Squares   F-statistic:                     80.15\n",
        "Date:                Wed, 02 Aug 2023   Prob (F-statistic):           1.63e-50\n",
-       "Time:                        19:29:52   Log-Likelihood:                -1028.6\n",
+       "Time:                        19:40:32   Log-Likelihood:                -1028.6\n",
        "No. Observations:                 127   AIC:                             2155.\n",
        "Df Residuals:                      78   BIC:                             2295.\n",
        "Df Model:                          48                                         \n",
@@ -4692,7 +4691,6 @@
     "    \n",
     "    ax = model.resid.hist()\n",
     "    ax.set_title('Normalcy in errors')\n",
-    "    plt.savefig('plot.png', dpi=300, bbox_inches='tight')\n",
     "    plt.show()\n",
     "\n",
     "def testing_Anderson_Darling(model):\n",
@@ -5060,7 +5058,7 @@
        "  <th>Date:</th>             <td>Wed, 02 Aug 2023</td> <th>  Prob (F-statistic):</th> <td>2.22e-68</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>19:29:54</td>     <th>  Log-Likelihood:    </th> <td> -1037.4</td>\n",
+       "  <th>Time:</th>                 <td>19:40:33</td>     <th>  Log-Likelihood:    </th> <td> -1037.4</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   127</td>      <th>  AIC:               </th> <td>   2133.</td>\n",
@@ -5205,7 +5203,7 @@
        "\\textbf{Model:}                    &       OLS        & \\textbf{  Adj. R-squared:    } &     0.971   \\\\\n",
        "\\textbf{Method:}                   &  Least Squares   & \\textbf{  F-statistic:       } &     149.9   \\\\\n",
        "\\textbf{Date:}                     & Wed, 02 Aug 2023 & \\textbf{  Prob (F-statistic):} &  2.22e-68   \\\\\n",
-       "\\textbf{Time:}                     &     19:29:54     & \\textbf{  Log-Likelihood:    } &   -1037.4   \\\\\n",
+       "\\textbf{Time:}                     &     19:40:33     & \\textbf{  Log-Likelihood:    } &   -1037.4   \\\\\n",
        "\\textbf{No. Observations:}         &         127      & \\textbf{  AIC:               } &     2133.   \\\\\n",
        "\\textbf{Df Residuals:}             &          98      & \\textbf{  BIC:               } &     2215.   \\\\\n",
        "\\textbf{Df Model:}                 &          28      & \\textbf{                     } &             \\\\\n",
@@ -5275,7 +5273,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.971\n",
        "Method:                 Least Squares   F-statistic:                     149.9\n",
        "Date:                Wed, 02 Aug 2023   Prob (F-statistic):           2.22e-68\n",
-       "Time:                        19:29:54   Log-Likelihood:                -1037.4\n",
+       "Time:                        19:40:33   Log-Likelihood:                -1037.4\n",
        "No. Observations:                 127   AIC:                             2133.\n",
        "Df Residuals:                      98   BIC:                             2215.\n",
        "Df Model:                          28                                         \n",
